@@ -3,3 +3,5 @@ Revision history for TreeTagger
 0.01    September 11, 2010
         First version, released on an unsuspecting world.
 
+        September 18, 2010
+        Fixed installation issues (essentially removed Build.PL dependencies).
